--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="logo">
         <a href="https://sasha111134.github.io/Support.Fund/"></a>
-        <img src="D:\Сайт для сертифікату\images\Subtract.png" alt="Logo" width="50" height="50"> <!-- Placeholder для логотипа -->
+        <img src="images\Subtract.png" alt="Logo" width="50" height="50"> <!-- Placeholder для логотипа -->
     </div>
     <nav>
         <a href="#">Контакти</a>
@@ -28,7 +28,7 @@
         <button>Підтримати Фонд</button>
     </div>
     <div class="hero-image">
-        <img src="D:\Сайт для сертифікату\images\9d87e92590ae5ecb611ebe146e21a634.png" alt="Logo" width="800" height="500">
+        <img src="images\9d87e92590ae5ecb611ebe146e21a634.png" alt="Logo" width="800" height="500">
     </div>
 </section>
 
@@ -43,7 +43,7 @@
         <p>Ми допомагаємо людям, які постраждали знайти правильне лікування. У нашому фонді є чотири напрямки: фізіо та реабілітаційної медицини, терапевтичне, неврологічне та хірургічне. Ми маємо заклади-партнери, де швидко та якісно можуть надати допомогу.</p>
     </div>
     <div class="rehab-image">
-        <img src="D:\Сайт для сертифікату\images\8a201355e5549e571b3f04f9ec009d14.png" alt="Logo" width="500" height="350">
+        <img src="images\8a201355e5549e571b3f04f9ec009d14.png" alt="Logo" width="500" height="350">
     </div>
 </section>
 
